--- a/static/custom.css
+++ b/static/custom.css
@@ -97,3 +97,7 @@ box-shadow: 0px 4px 11px  rgba(0, 112, 244,0.5);
 .btn-red-glow ::selection {
   background: rgba(0, 0, 0, 0) !important;
 }
+
+.text-center{
+  text-align: center;
+}
